cabal-version:      2.4
name:               haskell
version:            0.1.0.0

synopsis: Advent of Code 2017 solutions.
description: Haskell solutions for Advent of Code 2017.

common day
    build-depends:
        base ^>=4.17,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language: Haskell2010

executable 01
    import:  day
    main-is: Day01.hs

executable 02
    import:  day
    main-is: Day02.hs

executable 03
    import:  day
    main-is: Day03.hs

executable 04
    import:  day
    main-is: Day04.hs

executable 05
    import:  day
    main-is: Day05.hs

executable 06
    import:  day
    main-is: Day06.hs

executable 07
    import:  day
    main-is: Day07.hs

executable 08
    import:  day
    main-is: Day08.hs

executable 09
    import:  day
    main-is: Day09.hs

executable 10
    import:  day
    main-is: Day10.hs

executable 11
    import:  day
    main-is: Day11.hs

executable 12
    import:  day
    main-is: Day12.hs

executable 13
    import:  day
    main-is: Day13.hs

executable 14
    import:  day
    main-is: Day14.hs

executable 15
    import:  day
    main-is: Day15.hs

executable 16
    import:  day
    main-is: Day16.hs

executable 17
    import:  day
    main-is: Day17.hs

executable 18
    import:  day
    main-is: Day18.hs

executable 19
    import:  day
    main-is: Day19.hs

executable 20
    import:  day
    main-is: Day20.hs

executable 21
    import:  day
    main-is: Day21.hs

executable 22
    import:  day
    main-is: Day22.hs

executable 23
    import:  day
    main-is: Day23.hs

executable 24
    import:  day
    main-is: Day24.hs

executable 25
    import:  day
    main-is: Day25.hs
